# calculator_flutter_app

./: AGENTS.md  README.md  flutter_rust_bridge.yaml  pubspec.yaml
.github/workflows/: deploy.yml
android/: build.gradle.kts  gradle.properties  key.properties.example
android/app/: build.gradle.kts
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/app/: app.dart
lib/init/: rust_init.dart  rust_init_io.dart  rust_init_web.dart
lib/src/rust/: history.dart  (+3 more)
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml  rustfmt.toml
rust/src/: converter.rs  error.rs  evaluator.rs  frb_generated.rs  history.rs  lib.rs  parser.rs  rational.rs  tests.rs
rust/src/api/: calculator.rs  converter.rs  converter_api.rs  mod.rs
rust/src/bridge/: calculator.rs  converter.rs  currency.rs  history.rs  mod.rs  modular_arithmetic.rs  modular_math.rs  utilities.rs
rust/src/calculator/: error.rs  evaluator.rs  history.rs  memory.rs  mod.rs  parser.rs  rational.rs
rust/src/calculator/evaluator/: basic_evaluator.rs  function_evaluator.rs  mod.rs
rust/src/converter/: converter.rs  mod.rs
rust/src/modular_arithmetic/: cayley.rs  error.rs  evaluator.rs  galois.rs  mod.rs  mod_arith.rs  number_theory.rs  number_theory_ext.rs  parser.rs  quadratic.rs  ring_analysis.rs  structure_parser.rs
rust/src/modular_math/: cayley.rs  error.rs  evaluator.rs  galois.rs  mod.rs  mod_arith.rs  number_theory.rs  number_theory_ext.rs  parser.rs  quadratic.rs  ring_analysis.rs  structure_parser.rs
rust/src/shared/: error.rs  history.rs  mod.rs
rust/src/tests/: calculator_tests.rs  converter_tests.rs  currency_tests.rs  mod.rs  modular_arithmetic_tests.rs  modular_math_tests.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_calc_core.podspec  (+1 more)
(+116 files in other folders)
